--- a/SporSalonu_1/Views/Antrenors/Index.cshtml
+++ b/SporSalonu_1/Views/Antrenors/Index.cshtml
@@ -1,59 +1,61 @@
 ﻿@model IEnumerable<SporSalon_1.Models.Antrenor>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Antrenör Listesi";
 }
 
-<h1>Index</h1>
+<h1>Antrenör Listesi</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-primary">Yeni Antrenör Ekle</a>
 </p>
-<table class="table">
+
+<table class="table table-striped table-hover">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.AdSoyad)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.UzmanlikAlani)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ResimUrl)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CalismaSaatleri)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.SporSalonu)
-            </th>
-            <th></th>
+            <th>Ad Soyad</th>
+            <th>Uzmanlık Alanı</th>
+            <th>Fotoğraf</th>
+            <th>Çalışma Saatleri</th>
+            <th>Spor Salonu</th>
+            <th>İşlemler</th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.AdSoyad)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UzmanlikAlani)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ResimUrl)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CalismaSaatleri)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SporSalonu.Ad)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            /* تمت إضافة align-middle لمحاذاة النص والزرار في وسط السطر عمودياً */
+            <tr class="align-middle">
+                <td>
+                    @Html.DisplayFor(modelItem => item.AdSoyad)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.UzmanlikAlani)
+                </td>
+                <td>
+                    @if (!string.IsNullOrEmpty(item.ResimUrl))
+                    {
+                        <img src="@item.ResimUrl" width="100" height="80" style="object-fit:cover; border-radius: 5px;" alt="Antrenör Resmi" />
+                    }
+                    else
+                    {
+                        <span class="text-muted">Resim Yok</span>
+                    }
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CalismaSaatleri)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.SporSalonu.Ad)
+                </td>
+                <td>
+                    <div class="btn-group" role="group">
+                        <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-warning">Düzenle</a>
+                        <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-sm btn-info">Detaylar</a>
+                        <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-danger">Sil</a>
+                    </div>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
