--- a/SporSalonu_1/Views/Uyes/Create.cshtml
+++ b/SporSalonu_1/Views/Uyes/Create.cshtml
@@ -4,16 +4,17 @@
     ViewData["Title"] = "Yeni Üye Ekle";
 }
 
-<h1>Yeni Üye Ekle (إضافة عضو جديد)</h1>
+<h1>Yeni Üye Ekle</h1>
 
+<h4>Üye Bilgileri</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
+    <div class="col-md-6">
+        <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <div class="form-group mb-3">
-                <label asp-for="AdSoyad" class="control-label"></label>
+                <label asp-for="AdSoyad" class="control-label">Adı Soyadı</label>
                 <input asp-for="AdSoyad" class="form-control" />
                 <span asp-validation-for="AdSoyad" class="text-danger"></span>
             </div>
@@ -30,27 +31,34 @@
                 <span asp-validation-for="PhoneNumber" class="text-danger"></span>
             </div>
 
-            <div class="form-group mb-3">
-                <label asp-for="Boy" class="control-label"></label>
-                <input asp-for="Boy" class="form-control" />
-                <span asp-validation-for="Boy" class="text-danger"></span>
-            </div>
+            <div class="row">
+                <div class="col-md-6 form-group mb-3">
+                    <label asp-for="Boy" class="control-label"></label>
+                    <input asp-for="Boy" class="form-control" placeholder="cm" />
+                    <span asp-validation-for="Boy" class="text-danger"></span>
+                </div>
 
-            <div class="form-group mb-3">
-                <label asp-for="Kilo" class="control-label"></label>
-                <input asp-for="Kilo" class="form-control" />
-                <span asp-validation-for="Kilo" class="text-danger"></span>
+                <div class="col-md-6 form-group mb-3">
+                    <label asp-for="Kilo" class="control-label"></label>
+                    <input asp-for="Kilo" class="form-control" placeholder="kg" />
+                    <span asp-validation-for="Kilo" class="text-danger"></span>
+                </div>
             </div>
 
             <div class="form-group mb-3">
                 <label asp-for="DogumTarihi" class="control-label"></label>
-                <input asp-for="DogumTarihi" class="form-control" type="date" />
+                <input asp-for="DogumTarihi" class="form-control" />
                 <span asp-validation-for="DogumTarihi" class="text-danger"></span>
             </div>
 
+            <div class="form-group mb-4">
+                <label class="control-label">Profil Fotoğrafı Yükle</label>
+                <input type="file" name="file" class="form-control" accept="image/*" />
+            </div>
+
             <div class="form-group mt-3">
-                <input type="submit" value="Oluştur (حفظ)" class="btn btn-primary" />
-                <a asp-action="Index" class="btn btn-secondary">İptal (إلغاء)</a>
+                <input type="submit" value="Oluştur" class="btn btn-primary" />
+                <a asp-action="Index" class="btn btn-secondary">Listeye Dön</a>
             </div>
         </form>
     </div>
