--- a/SporSalonu_1/Views/Shared/_Layout.cshtml
+++ b/SporSalonu_1/Views/Shared/_Layout.cshtml
@@ -39,6 +39,11 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Randevus" asp-action="Index">Randevular</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-info fw-bold" asp-controller="YapayZeka" asp-action="Index">
+                                <i class="fa fa-robot"></i> AI Asistan
+                            </a>
+                        </li>
                     </ul>
 
                     <ul class="navbar-nav">
