--- a/SporSalonu_1/Views/Shared/_Layout.cshtml
+++ b/SporSalonu_1/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Hizmets" asp-action="Index">Hizmetler</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Randevu" asp-action="Index">Randevular</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Randevus" asp-action="Index">Randevular</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-info fw-bold" asp-controller="YapayZeka" asp-action="Index">
