--- a/SporSalonu_1/Views/YapayZeka/Index.cshtml
+++ b/SporSalonu_1/Views/YapayZeka/Index.cshtml
@@ -72,8 +72,8 @@
                         <p class="lead fs-6 text-muted">@Model.EgzersizPlani</p>
 
                         <div class="mt-4 text-center">
-                            <a asp-controller="Randevus" asp-action="Create" class="btn btn-outline-dark">
-                                Bu Programa Uygun Randevu Al <i class="fa fa-arrow-right"></i>
+                            <a href="/Randevus/Create" class="btn btn-outline-dark btn-lg mt-3">
+                                Bu Programa Uygun Randevu Al <i class="bi bi-arrow-right"></i>
                             </a>
                         </div>
                     </div>
